<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Configuration" >

    <ToggleButton
        android:id="@+id/btnEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/service_enabled" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnInstallWatchApp"
        android:layout_alignParentBottom="true"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtEnableDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnEnabled"
        android:layout_alignTop="@+id/btnEnabled"
        android:layout_toRightOf="@+id/btnEnabled"
        android:gravity="center"
        android:text="@string/description_world"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/chkBtnQuiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnEnabled"
        android:layout_below="@+id/txtEnableDesc"
        android:text="@string/quiet_time" />


    <CheckBox
        android:id="@+id/chkBtnSilent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chkBtnQuiet"
        android:layout_alignBottom="@+id/chkBtnQuiet"
        android:layout_toRightOf="@+id/chkBtnQuiet"
        android:text="No notifictions on silent" />

    <TextView
        android:id="@+id/txtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkBtnQuiet"
        android:layout_below="@+id/chkBtnQuiet"
        android:text="@string/fromString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFrom"
        android:layout_below="@+id/txtFrom"
        android:onClick="showTimePickerDialogFrom"
        android:text="Button" />

    <Button
        android:id="@+id/btnTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTo"
        android:layout_below="@+id/txtTo"
        android:onClick="showTimePickerDialogTo"
        android:text="Button" />

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkBtnSilent"
        android:layout_below="@+id/chkBtnSilent"
        android:text="@string/toString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnInstallWatchApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnFrom"
        android:layout_below="@+id/btnFrom"
        android:text="@string/watch_app" />

</RelativeLayout>